initial final ui commit, sans ssl

--- a/views/classes.ejs
+++ b/views/classes.ejs
@@ -17,21 +17,21 @@
 <div class="container" id="header">
     <div class="row">
 
-      <div class="col-4 header-item">
+      <div class="col-4" id="col_1">
         <a href="/">
-          <label>ADJ Home</label>
+          <label class="class_header">Home</label>
         </a>
       </div>
 
-      <div class="col-4 header-item">
+      <div class="col-4" id="col_2">
         <a href="tel:+17038796500">
-          <label>703 730-8525</label>
+          <label class="class_header">Call</label>
         </a>
       </div>
 
-      <div class="col-4 header-item">
+      <div class="col-4" id="col_3">
         <a href= "mailto:adj23@comcast.net">
-          <label>adj23@comcast.net</label>
+          <label class="class_header">Email</label>
         </a>
       </div>
 
@@ -39,14 +39,13 @@
   </div>
 
   <div class="container">
-    <h1 class="display-5" id="class-page-header">Classes</h1>
+    <h1 class="display-5" id="class-page-header">ADJ Classes</h1>
     <div class="grid">
       
       <div class="card class_card">
         <img class="card-img-top classes_images" src="/images/driver-Improvement.png" alt="Card image cap">
         <div class="card-body">
-          <h3 class="classes-header">Driver Improvement</h3>
-          <h3>In-Person</h3>
+          <h3 class="classes-header">In-Person Driver Improvement</h3>
           <p>At ADJ Driver Improvement Center in Woodbridge, Virginia, we try to make your Driver Improvement Clinic experience as easy as possible. All Driver Improvement Clinics are $65.00, regardless of the format you choose.  We are one of the few schools that have a dedicated office with multiple classrooms, therefore we never have to cancel our classes.  If you find that you need a class last minute or maybe you have just procrastinated…… Come on in, walk-ins are always welcome!</p>
           <p>In-Person Classes:  We offer in-person Driver Improvement Clinics as one-day classes, on Saturday or Sunday.  We also offer a full eight hour class during the week on a Wednesday.</p>
           <p>Saturday or Sunday Classes: We offer Driver Improvement classes every Saturday and every other Sunday.  These classes are one-day classes, they begin at 8:30 a.m. and finish at 5:00 p.m. All components of the class, including the final exam and certificate are handled in-                                 house, same day.  When you leave our class, you have everything you need, in-hand.</p>
@@ -75,8 +74,7 @@
       <div class="card class_card" id="online">
         <img class="card-img-top classes_images" src="/images/online-class-image.png" alt="Card image cap">
         <div class="card-body">
-          <h3>Driver Improvement</h3>
-          <h3>Online</h3>
+          <h3>Online Driver Improvement</h3>
           <p>ADJ Driver Improvement Center in Woodbridge, Virginia offers a convenient online Driver Improvement Clinic that is approved by the Virginia Department of Motor Vehicles and accepted by all courts that will allow online classes.  Taking your Driver Improvement Course with us ensures that your traffic school experience is handled efficiently and correctly the first time.</p>
           <p>All requirements for our online class are handled in two easy steps: Complete your online class WHEREVER and WHENEVER you please
             Complete your test at our private facility in Woodbridge, Virginia </p>
@@ -113,7 +111,7 @@
       <div class="card class_card" id="3-times">
         <img class="card-img-top classes_images" src="/images/driver-manual-icon.png" alt="Card image cap">
         <div class="card-body">
-          <h3>DMV 3 Times Failed</h3>
+          <h3>DMV 3 TImes Failure/Learner Permit Class</h3>
           <p>If you have unfortunately failed a test at DMV three times while trying to acquire a Learners Permit or reinstate your Driver License, this is the class that is required.
           </p>
           <p>The Driver Manual Course / 3 Failures Class needs to be 8 hours of instruction to satisfy the DMV’s requirements and is basically a highly concentrated study period. In this class we try to cover everything that could possibly be asked on the test, as well as try to clear up any problems with terminology or information that you might be having difficulty with.
@@ -136,7 +134,7 @@
       <div class="card class_card" id="reckless">
         <img class="card-img-top classes_images" src="/images/Reckless-Aggressive-class.png" alt="Card image cap">
         <div class="card-body">
-          <h3>Reckless/Aggressive</h3>
+          <h3>4-hour Reckless/Aggressive Class</h3>
           <p>At ADJ Driver Improvement Center, we try to offer the 4-hour Reckless/Aggressive Class in the most convenient format as possible. This class is offered only in the evenings and it is completed in one trip to our office. The cost of this class is $50.00 and class times are from 6pm – 10pm.  We offer this class on different weeknights throughout the month so that hopefully we can be in session on a night that you have available.
             A 4-hour Reckless/Aggressive Class is sometimes requested by attorneys or by the courts in certain counties/cities in addition to an 8-hour Driver Improvement Course to have a ticket dismissed or reduced.
           </p>
@@ -155,7 +153,7 @@
       <div class="card class_card" id="in-car">
         <img class="card-img-top classes_images" src="/images/license-icon.png" alt="Card image cap">
         <div class="card-body">
-          <h3>In-Car/On-Road Driver Training</h3>
+          <h3>In-Car Driver Training</h3>
           <p>At ADJ Driving School in Woodbridge, VA, we provide in-car training for both adults & teenagers.
             With these classes, our main goal is to prepare you for driving in one of the most populated areas in the country.
             The Virginia DMV separates these drivers into two categories and the requirements for each are very different.
@@ -186,8 +184,8 @@
         <img class="card-img-top classes_images" src="/images/Clases-en-Espanol.png" alt="Card image cap">
         <div class="card-body">
           <h3>Clases en Español</h3>
-        <p> Por clases en español por favor llama al número <a href="tel:+15712851521">
-            <label>571 285-1521</label>
+        <p> Por clases en español por favor llama al número<p><a href="tel:+15712851521">
+            <label class="label_no_padding">571 285-1521</label>
           </a>
           </p>
 
@@ -196,13 +194,15 @@
           Esta clase es para aquellos que están tratando de obtener un permiso de aprendiz y no han logrado pasar la parte de los signos de la prueba o el conocimiento general. Esta es también la clase para aquellos que han fallado su prueba 3 veces al intentar restablecer una licencia de conducir de Virginia suspendida o vencida.</p>
           <p><em>Examen Practico del DMV/ Clase de Bypass/evitar el DMV</em> ADJ Driver Improvement Center es un centro de pruebas de terceros para el DMV. Esta clase ayuda con el proceso de convertir un permiso de aprendiz de Virginia en una licencia de conducir. La finalización de esta clase le permite realizar pruebas con nuestro instructor en su idioma principal y evitar
           tener que tomar su Examen final de habilidades en carretera en el DMV.  Esta clase también le permite omitir el período de retención de 60 días en un permiso de aprendizaje.</p>
-          <p> Para obtener más información, comuníquese con nuestro instructor que habla español, Sr. Jean Carminati al <a href="tel:+15712851521">
-            <label>571 285-1521</label>
-          </a>. Si no está disponible para responder, deje un mensaje y rápidamente le devolverá la llamada.</p>
+          <p> Para obtener más información, comuníquese con nuestro instructor que habla español, Sr. Jean Carminati al<a href="tel:+15712851521" id="spanish_a_tag">
+            <label class="label_no_padding">571 285-1521</label></a>
+          </a>Si no está disponible para responder, deje un mensaje y rápidamente le devolverá la llamada.</p>
           <p>NO OFRECEMOS clases de CDL o Motocicleta</p>
+
           <div>
             <h2 class="calendar"><a href="https://app.acuityscheduling.com/schedule.php?owner=19202093">Ver Horario</a></h2>
           </div>
+
         </div>
       </div>
 
@@ -220,8 +220,7 @@
               </a>
           </div>
           <div class="col-2"> 
-              <a href="/">
-              <a class="social">
+              <a href="https://www.linkedin.com/in/adj-driver-improvement-center-632196b5">
                 <i class="fa fa-linkedin fa-3x"></i>
               </a>
           </div>
