--- a/public/master.css
+++ b/public/master.css
@@ -2,7 +2,7 @@ body {
   background-image: url("/images/main-background.jpeg");
   background-repeat: no-repeat;
   background-size: cover;
-  font-family: "Patua One", cursive;
+  font-family: "Nunito Sans";
 }
 
 .icons {
@@ -32,6 +32,39 @@ a :hover {
   margin-bottom: -20px;
 }
 
+label {
+  padding-left: 40px;
+  padding-top: 40px;
+}
+
+#email_header {
+  padding-left: 80px;
+}
+
+.class_header {
+  padding: 40px;
+}
+
+#col_1 {
+  padding-left: 40px;
+}
+
+#col_2 {
+  padding-left: 50px;
+}
+
+#col_3 {
+  padding-left: 30px;
+  padding-right: 60px;
+}
+
+@media only screen and (min-width: 768px) {
+  #col_1 #col_2 #col_3 {
+    padding-left: 140px;
+    padding-right: 140px;
+  }
+}
+
 .card img {
   justify-content: center;
   max-width: 80%;
@@ -39,9 +72,9 @@ a :hover {
 }
 
 #adj {
-  padding-top: 0px;
-  padding-bottom: 50px;
-  box-shadow: 5px 5px 5px #000000;
+  padding-top: 20px;
+  padding-bottom: 40px;
+  box-shadow: 5px 5px 5px 5px #000000;
 }
 
 .title {
@@ -73,6 +106,18 @@ a :hover {
 }
 
 #third_row {
+  padding: 20px;
+}
+
+#fourth_row {
+  padding: 20px;
+}
+
+#fifth_row {
+  padding: 20px;
+}
+
+#sixth_row {
   padding: 20px;
 }
 
@@ -140,9 +185,9 @@ a :hover {
 
 .index_page_card:hover {
   border-color: yellow;
-  -ms-transform: rotate(-20deg); /* IE 9 */
-  -webkit-transform: rotate(-20deg); /* Safari prior 9.0 */
-  transform: rotate(-20deg); /* Standard syntax */
+  transform: scale(
+    1.1
+  ); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
 }
 
 .class_card {
@@ -168,12 +213,14 @@ a :hover {
 }
 
 #class-page-header {
-  padding-bottom: 20px;
-  padding-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  padding-left: 50px;
 }
 
 h2 {
-  color: #66fcf1;
+  color: white;
   // background-image: url("https://images.cdn.circlesix.co/image/1/640/0/uploads/posts/2018/11/7ab478f5a83ed1ceb10650b2169826e6.jpg");
   // background-position: center; /* Center the image */
   // background-repeat: no-repeat; /* Do not repeat the image */
@@ -181,11 +228,13 @@ h2 {
   text-align: center;
   // box-shadow: 5px 5px 5px #000000;
   padding-bottom: 60px;
+  /* font-family: "Patua One", cursive; */
 }
 
 h1 {
-  color: #66fcf1;
+  color: white;
   text-align: center;
+  /* font-family: "Patua One", cursive; */
 }
 
 .calendar {
@@ -225,4 +274,8 @@ p {
 
 .fa {
   color: #66fcf1;
+}
+
+.label_no_padding {
+  padding: 0px;
 }
