--- a/public/master.css
+++ b/public/master.css
@@ -45,7 +45,7 @@ label {
   padding: 40px;
 }
 
-#col_1 {
+/* #col_1 {
   padding-left: 40px;
 }
 
@@ -56,7 +56,7 @@ label {
 #col_3 {
   padding-left: 30px;
   padding-right: 60px;
-}
+} */
 
 @media only screen and (min-width: 768px) {
   #col_1 #col_2 #col_3 {
