change navbar items and classes order

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,7 +38,7 @@
       <div class="row">
         <div class="col" id="col_1">
           <a href="tel:+17038796500">
-            <label>Call</label>
+            <label>Contact Us</label>
           </a>
         </div>
 
@@ -46,13 +46,13 @@
           <a
             href="https://www.google.com/maps/place/4326+Dale+Blvd+%238,+Woodbridge,+VA+22193,+USA/@38.6481644,-77.3405033,17z/data=!3m1!4b1!4m5!3m4!1s0x89b657c9643a562b:0xd98698700253593b!8m2!3d38.6481644!4d-77.33832"
           >
-            <label>Map</label>
+            <label>Location</label>
           </a>
         </div>
 
         <div class="col" id="col_3">
           <a href="mailto:adj23@comcast.net">
-            <label id="email_header">Email</label>
+            <label id="email_header">Email Us</label>
           </a>
         </div>
 
@@ -97,7 +97,7 @@
                   class="icons"
                   alt="logo"
                 />
-                <h3>In-Person Driver Improvement</h3>
+                <h3>In-Person Driver Improvement Class</h3>
                 <p>Learn more</p>
               </a>
             </div>
@@ -113,7 +113,7 @@
                   class="icons"
                   alt="logo"
                 />
-                <h3>Online Driver Improvement</h3>
+                <h3>Online Driver Improvement Class</h3>
                 <p>Learn more</p>
               </a>
             </div>
@@ -122,22 +122,6 @@
 
         <div class="container">
           <div class="row" id="third_row">
-            <div class="col class_cards">
-              <a href="/classes/#3-times" class="card index_page_card">
-                <img
-                  src="/images/driver-manual-icon.png"
-                  class="icons"
-                  alt="logo"
-                />
-                <h3>DMV 3 TImes Failure/Learner Permit Class</h3>
-                <p>Learn more</p>
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="container">
-          <div class="row" id="fourth_row">
             <div class="col class_cards">
               <a href="/classes/#reckless" class="card index_page_card">
                 <img
@@ -153,11 +137,15 @@
         </div>
 
         <div class="container">
-          <div class="row" id="fifth_row">
+          <div class="row" id="fourth_row">
             <div class="col class_cards">
-              <a href="/classes/#in-car" class="card index_page_card">
-                <img src="/images/license-icon.png" class="icons" alt="logo" />
-                <h3>In-Car Driver Training</h3>
+              <a href="/classes/#3-times" class="card index_page_card">
+                <img
+                  src="/images/driver-manual-icon.png"
+                  class="icons"
+                  alt="logo"
+                />
+                <h3>DMV 3 Failures/Permit Class</h3>
                 <p>Learn more</p>
               </a>
             </div>
@@ -165,12 +153,24 @@
         </div>
 
     <div class="container">
-      <div class="row" id="sixth_row">
+      <div class="row" id="fifth_row">
         <div class="col class_cards">
           <a href="/classes/#espanol" class="card index_page_card">
             <img src="/images/Clases-en-Espanol.png" class="icons" alt="logo" />
             <h3>Clases en Español</h3>
             <p>Aprende más</p>
+          </a>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row" id="sixth_row">
+        <div class="col class_cards">
+          <a href="/classes/#in-car" class="card index_page_card">
+            <img src="/images/license-icon.png" class="icons" alt="logo" />
+            <h3>In-Car Driver Training</h3>
+            <p>Learn more</p>
           </a>
         </div>
       </div>
