--- a/views/classes.ejs
+++ b/views/classes.ejs
@@ -25,13 +25,13 @@
 
       <div class="col-4" id="col_2">
         <a href="tel:+17038796500">
-          <label class="class_header">Call</label>
+          <label class="class_header">Call Us</label>
         </a>
       </div>
 
       <div class="col-4" id="col_3">
         <a href= "mailto:adj23@comcast.net">
-          <label class="class_header">Email</label>
+          <label class="class_header">Email Us</label>
         </a>
       </div>
 
@@ -45,7 +45,7 @@
       <div class="card class_card">
         <img class="card-img-top classes_images" src="/images/driver-Improvement.png" alt="Card image cap">
         <div class="card-body">
-          <h3 class="classes-header">In-Person Driver Improvement</h3>
+          <h3 class="classes-header">In-Person Driver Improvement Class</h3>
           <p>At ADJ Driver Improvement Center in Woodbridge, Virginia, we try to make your Driver Improvement Clinic experience as easy as possible. All Driver Improvement Clinics are $65.00, regardless of the format you choose.  We are one of the few schools that have a dedicated office with multiple classrooms, therefore we never have to cancel our classes.  If you find that you need a class last minute or maybe you have just procrastinated…… Come on in, walk-ins are always welcome!</p>
           <p>In-Person Classes:  We offer in-person Driver Improvement Clinics as one-day classes, on Saturday or Sunday.  We also offer a full eight hour class during the week on a Wednesday.</p>
           <p>Saturday or Sunday Classes: We offer Driver Improvement classes every Saturday and every other Sunday.  These classes are one-day classes, they begin at 8:30 a.m. and finish at 5:00 p.m. All components of the class, including the final exam and certificate are handled in-                                 house, same day.  When you leave our class, you have everything you need, in-hand.</p>
@@ -74,7 +74,7 @@
       <div class="card class_card" id="online">
         <img class="card-img-top classes_images" src="/images/online-class-image.png" alt="Card image cap">
         <div class="card-body">
-          <h3>Online Driver Improvement</h3>
+          <h3>Online Driver Improvement Class</h3>
           <p>ADJ Driver Improvement Center in Woodbridge, Virginia offers a convenient online Driver Improvement Clinic that is approved by the Virginia Department of Motor Vehicles and accepted by all courts that will allow online classes.  Taking your Driver Improvement Course with us ensures that your traffic school experience is handled efficiently and correctly the first time.</p>
           <p>All requirements for our online class are handled in two easy steps: Complete your online class WHEREVER and WHENEVER you please
             Complete your test at our private facility in Woodbridge, Virginia </p>
@@ -111,7 +111,7 @@
       <div class="card class_card" id="3-times">
         <img class="card-img-top classes_images" src="/images/driver-manual-icon.png" alt="Card image cap">
         <div class="card-body">
-          <h3>DMV 3 TImes Failure/Learner Permit Class</h3>
+          <h3>DMV 3 Failures/Permit Class</h3>
           <p>If you have unfortunately failed a test at DMV three times while trying to acquire a Learners Permit or reinstate your Driver License, this is the class that is required.
           </p>
           <p>The Driver Manual Course / 3 Failures Class needs to be 8 hours of instruction to satisfy the DMV’s requirements and is basically a highly concentrated study period. In this class we try to cover everything that could possibly be asked on the test, as well as try to clear up any problems with terminology or information that you might be having difficulty with.
@@ -150,6 +150,32 @@
         </div>
       </div>
 
+      <div class="card class_card" id="espanol">
+        <img class="card-img-top classes_images" src="/images/Clases-en-Espanol.png" alt="Card image cap">
+        <div class="card-body">
+          <h3>Clases en Español</h3>
+        <p> Por clases en español por favor llama al número<p><a href="tel:+15712851521">
+            <label class="label_no_padding">571 285-1521</label>
+          </a>
+          </p>
+
+          <p>La Escula de Manejo ADJ en Woodbridge ofrece todas las clases para ayudar a las personas con el proceso de concesión de licencias.  Para servir mejor a nuestra comunidad, ofrecemos algunas clases para quienes el español es su idioma principal.</p>
+          <p><em>Clase de 3 Fallas/Clase del Manual del Conductor</em>
+          Esta clase es para aquellos que están tratando de obtener un permiso de aprendiz y no han logrado pasar la parte de los signos de la prueba o el conocimiento general. Esta es también la clase para aquellos que han fallado su prueba 3 veces al intentar restablecer una licencia de conducir de Virginia suspendida o vencida.</p>
+          <p><em>Examen Practico del DMV/ Clase de Bypass/evitar el DMV</em> ADJ Driver Improvement Center es un centro de pruebas de terceros para el DMV. Esta clase ayuda con el proceso de convertir un permiso de aprendiz de Virginia en una licencia de conducir. La finalización de esta clase le permite realizar pruebas con nuestro instructor en su idioma principal y evitar
+          tener que tomar su Examen final de habilidades en carretera en el DMV.  Esta clase también le permite omitir el período de retención de 60 días en un permiso de aprendizaje.</p>
+          <p> Para obtener más información, comuníquese con nuestro instructor que habla español, Sr. Jean Carminati al<a href="tel:+15712851521" id="spanish_a_tag">
+            <label class="label_no_padding">571 285-1521</label></a>
+          </a>Si no está disponible para responder, deje un mensaje y rápidamente le devolverá la llamada.</p>
+          <p>NO OFRECEMOS clases de CDL o Motocicleta</p>
+
+          <div>
+            <h2 class="calendar"><a href="https://app.acuityscheduling.com/schedule.php?owner=19202093">Ver Horario</a></h2>
+          </div>
+
+        </div>
+      </div>
+
       <div class="card class_card" id="in-car">
         <img class="card-img-top classes_images" src="/images/license-icon.png" alt="Card image cap">
         <div class="card-body">
@@ -180,31 +206,7 @@
         </div>
       </div>
 
-      <div class="card class_card" id="espanol">
-        <img class="card-img-top classes_images" src="/images/Clases-en-Espanol.png" alt="Card image cap">
-        <div class="card-body">
-          <h3>Clases en Español</h3>
-        <p> Por clases en español por favor llama al número<p><a href="tel:+15712851521">
-            <label class="label_no_padding">571 285-1521</label>
-          </a>
-          </p>
-
-          <p>La Escula de Manejo ADJ en Woodbridge ofrece todas las clases para ayudar a las personas con el proceso de concesión de licencias.  Para servir mejor a nuestra comunidad, ofrecemos algunas clases para quienes el español es su idioma principal.</p>
-          <p><em>Clase de 3 Fallas/Clase del Manual del Conductor</em>
-          Esta clase es para aquellos que están tratando de obtener un permiso de aprendiz y no han logrado pasar la parte de los signos de la prueba o el conocimiento general. Esta es también la clase para aquellos que han fallado su prueba 3 veces al intentar restablecer una licencia de conducir de Virginia suspendida o vencida.</p>
-          <p><em>Examen Practico del DMV/ Clase de Bypass/evitar el DMV</em> ADJ Driver Improvement Center es un centro de pruebas de terceros para el DMV. Esta clase ayuda con el proceso de convertir un permiso de aprendiz de Virginia en una licencia de conducir. La finalización de esta clase le permite realizar pruebas con nuestro instructor en su idioma principal y evitar
-          tener que tomar su Examen final de habilidades en carretera en el DMV.  Esta clase también le permite omitir el período de retención de 60 días en un permiso de aprendizaje.</p>
-          <p> Para obtener más información, comuníquese con nuestro instructor que habla español, Sr. Jean Carminati al<a href="tel:+15712851521" id="spanish_a_tag">
-            <label class="label_no_padding">571 285-1521</label></a>
-          </a>Si no está disponible para responder, deje un mensaje y rápidamente le devolverá la llamada.</p>
-          <p>NO OFRECEMOS clases de CDL o Motocicleta</p>
-
-          <div>
-            <h2 class="calendar"><a href="https://app.acuityscheduling.com/schedule.php?owner=19202093">Ver Horario</a></h2>
-          </div>
-
-        </div>
-      </div>
+      
 
     <div class="container" id="copyright_cpg">
         <div class="row">
