--- a/public/master.css
+++ b/public/master.css
@@ -213,7 +213,7 @@ label {
   margin-left: auto;
   margin-right: auto;
   text-align: center;
-  padding-left: 50px;
+  padding-top: 40px;
 }
 
 h2 {
