remove 4hour recless class

--- a/views/classes.ejs
+++ b/views/classes.ejs
@@ -176,7 +176,7 @@
             </div>
           </div>
 
-          <div class="card class_card" id="reckless">
+          <!-- <div class="card class_card" id="reckless">
             <img class="card-img-top classes_images" src="/images/iconfinder_stress-bomb-pressure-strain-mad_4383933.png"
               alt="Card image cap">
             <div class="card-body">
@@ -206,7 +206,7 @@
                     Schedule</a></h2>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <div class="card class_card" id="espanol">
             <img class="card-img-top classes_images" src="/images/iconfinder_83_4863661.png" alt="Card image cap">
