--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,84 +1,66 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ADJ Driver Improvement Center</title>
 
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" type="text/css" href="/master.css" />
-    <link
-      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-      rel="stylesheet"
-      integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Patua+One&display=swap"
-      rel="stylesheet"
-    />
-    <script
-      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-      crossorigin="anonymous"
-    ></script>
-  </head>
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>ADJ Driver Improvement Center</title>
 
-  <body>
-    <div class="container" id="header">
-      <div class="row">
-        <div class="col" id="col_1">
-          <a href="tel:+17037308525">
-            <label>Contact Us</label>
-          </a>
-        </div>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+    crossorigin="anonymous" />
+  <link rel="stylesheet" type="text/css" href="/master.css" />
+  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+    integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous" />
+  <link href="https://fonts.googleapis.com/css?family=Patua+One&display=swap" rel="stylesheet" />
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+</head>
 
-        <div class="col" id="col_2">
-          <a
-            href="https://www.google.com/maps/place/4326+Dale+Blvd+%238,+Woodbridge,+VA+22193,+USA/@38.6481644,-77.3405033,17z/data=!3m1!4b1!4m5!3m4!1s0x89b657c9643a562b:0xd98698700253593b!8m2!3d38.6481644!4d-77.33832"
-          >
-            <label>Location</label>
-          </a>
-        </div>
+<body>
+  <div class="container" id="header">
+    <div class="row">
+      <div class="col" id="col_1">
+        <a href="tel:+17037308525">
+          <label>Contact Us</label>
+        </a>
+      </div>
 
-        <div class="col" id="col_3">
-          <a href="mailto:adj23@comcast.net">
-            <label id="email_header">Email Us</label>
-          </a>
-        </div>
+      <div class="col" id="col_2">
+        <a href="https://www.google.com/maps/place/4326+Dale+Blvd+%238,+Woodbridge,+VA+22193,+USA/@38.6481644,-77.3405033,17z/data=!3m1!4b1!4m5!3m4!1s0x89b657c9643a562b:0xd98698700253593b!8m2!3d38.6481644!4d-77.33832">
+          <label>Location</label>
+        </a>
+      </div>
 
-        <!-- <div></div> -->
+      <div class="col" id="col_3">
+        <a href="mailto:adj23@comcast.net">
+          <label id="email_header">Email Us</label>
+        </a>
+      </div>
 
-        <div class="container">
-          <div class="row">
-            <div class="col-12" id="logo">
-              <img src="images/logo-web-transparent.png" alt="logo" />
-            </div>
+      <!-- <div></div> -->
+
+      <div class="container">
+        <div class="row">
+          <div class="col-12" id="logo">
+            <img src="images/logo-web-transparent.png" alt="logo" />
           </div>
         </div>
+      </div>
 
-        <div class="container">
-          <div class="row">
-            <div class="col-12" id="adj">
-              <h1>ADJ</h1>
-              <!-- <br /> -->
-              <h2>Driver Improvement Center</h2>
-              <!-- <br /> -->
-              <h4 class="description">Serving Northern Virginia since 1999</h4>
-            </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-12" id="adj">
+            <h1>ADJ</h1>
+            <!-- <br /> -->
+            <h2>Driver Improvement Center</h2>
+            <!-- <br /> -->
+            <h4 class="description">Serving Northern Virginia since 1999</h4>
           </div>
         </div>
+      </div>
 
-        <!-- <div class="container">
+      <!-- <div class="container">
       <div class="row">
         <div class="col">
           <h3 id="choose_class">
@@ -88,39 +70,32 @@
       </div>
     </div> -->
 
-        <div class="container">
-          <div class="row" id="first_row">
-            <div class="col class_cards">
-              <a href="/classes" class="card index_page_card">
-                <img
-                  src="/images/iconfinder_Speeding_Ticket-speed-policing-law-enforcement_4498991.png"
-                  class="icons"
-                  alt="logo"
-                />
-                <h3>In-Person Driver Improvement Class</h3>
-                <p>Learn more</p>
-              </a>
-            </div>
+      <div class="container">
+        <div class="row" id="first_row">
+          <div class="col class_cards">
+            <a href="/classes" class="card index_page_card">
+              <img src="/images/iconfinder_Speeding_Ticket-speed-policing-law-enforcement_4498991.png" class="icons"
+                alt="logo" />
+              <h3>In-Person Driver Improvement Class</h3>
+              <p>Learn more</p>
+            </a>
           </div>
         </div>
+      </div>
 
-        <div class="container">
-          <div class="row" id="second_row">
-            <div class="col class_cards">
-              <a href="/classes/#online" class="card index_page_card">
-                <img
-                  src="/images/iconfinder_online_course_teaching-study-class-learning_5867932.png"
-                  class="icons"
-                  alt="logo"
-                />
-                <h3>Online Driver Improvement Class</h3>
-                <p>Learn more</p>
-              </a>
-            </div>
+      <div class="container">
+        <div class="row" id="second_row">
+          <div class="col class_cards">
+            <a href="/classes/#online" class="card index_page_card">
+              <img src="/images/iconfinder_online_course_teaching-study-class-learning_5867932.png" class="icons" alt="logo" />
+              <h3>Online Driver Improvement Class</h3>
+              <p>Learn more</p>
+            </a>
           </div>
         </div>
+      </div>
 
-        <div class="container">
+      <!-- <div class="container">
           <div class="row" id="third_row">
             <div class="col class_cards">
               <a href="/classes/#reckless" class="card index_page_card">
@@ -134,103 +109,90 @@
               </a>
             </div>
           </div>
-        </div>
+        </div> -->
 
-        <div class="container">
-          <div class="row" id="fourth_row">
-            <div class="col class_cards">
-              <a href="/classes/#3-times" class="card index_page_card">
-                <img
-                  src="/images/driver-manual-icon.png"
-                  class="icons"
-                  alt="logo"
-                />
-                <h3>DMV 3 Failures/Permit Class</h3>
-                <p>Learn more</p>
-              </a>
-            </div>
+      <div class="container">
+        <div class="row" id="fourth_row">
+          <div class="col class_cards">
+            <a href="/classes/#3-times" class="card index_page_card">
+              <img src="/images/driver-manual-icon.png" class="icons" alt="logo" />
+              <h3>DMV 3 Failures/Permit Class</h3>
+              <p>Learn more</p>
+            </a>
           </div>
         </div>
+      </div>
 
-    <div class="container">
-      <div class="row" id="fifth_row">
-        <div class="col class_cards">
-          <a href="/classes/#espanol" class="card index_page_card">
-            <img src="/images/iconfinder_83_4863661.png" class="icons" alt="logo" />
-            <h3>Clases en Español</h3>
-            <p>Aprende más</p>
-          </a>
+      <div class="container">
+        <div class="row" id="fifth_row">
+          <div class="col class_cards">
+            <a href="/classes/#espanol" class="card index_page_card">
+              <img src="/images/iconfinder_83_4863661.png" class="icons" alt="logo" />
+              <h3>Clases en Español</h3>
+              <p>Aprende más</p>
+            </a>
+          </div>
         </div>
       </div>
-    </div>
 
-    <div class="container">
-      <div class="row" id="sixth_row">
-        <div class="col class_cards">
-          <a href="/classes/#in-car" class="card index_page_card">
-            <img src="/images/iconfinder_Driver_License-Id-License-Transport-Identification_5917197.png" class="icons" alt="logo" />
-            <h3>In-Car Driver Training</h3>
-            <p>Learn more</p>
-          </a>
+      <div class="container">
+        <div class="row" id="sixth_row">
+          <div class="col class_cards">
+            <a href="/classes/#in-car" class="card index_page_card">
+              <img src="/images/iconfinder_Driver_License-Id-License-Transport-Identification_5917197.png" class="icons"
+                alt="logo" />
+              <h3>In-Car Driver Training</h3>
+              <p>Learn more</p>
+            </a>
+          </div>
         </div>
       </div>
-    </div>
 
-    <div class="container footer">
-      <div class="row">
-        <div class="col">
-          <img src="/images/nvc.png" alt="nsc" />
-        </div>
-        <div class="col">
-          <img src="/images/DMV.png" alt="dmv" />
-        </div>
-        <div class="col" id="last_nsc">
-          <img src="/images/nvc.png" alt="nsc" />
+      <div class="container footer">
+        <div class="row">
+          <div class="col">
+            <img src="/images/nvc.png" alt="nsc" />
+          </div>
+          <div class="col">
+            <img src="/images/DMV.png" alt="dmv" />
+          </div>
+          <div class="col" id="last_nsc">
+            <img src="/images/nvc.png" alt="nsc" />
+          </div>
         </div>
       </div>
-    </div>
 
-    <div class="container" id="copyright_cpg">
-      <div class="row">
-        <div class="col-6">
-          <a href="/">© 2020 ADJ Driver Improvement Center</a>
-          <br />
-          <a href="http://www.cpgdev.net">cpg development</a>
-        </div>
-        <div class="col-2">
-          <a href="https://www.twitter.com/ADJ_Woodbridge">
-            <i class="fa fa-twitter fa-3x"></i>
-          </a>
-        </div>
-        <div class="col-2">
-          <a href="https://www.linkedin.com/in/adj-driver-improvement-center-632196b5">
-            <i class="fa fa-linkedin fa-3x"></i>
-          </a>
-        </div>
-        <div class="col-2">
-          <a
-            href="https://www.facebook.com/ADJ-Driver-Improvement-Center-181645525214421/"
-          >
-            <i class="fa fa-facebook fa-3x"></i>
-          </a>
+      <div class="container" id="copyright_cpg">
+        <div class="row">
+          <div class="col-6">
+            <a href="/">© 2020 ADJ Driver Improvement Center</a>
+            <br />
+            <a href="http://www.cpgdev.net">cpg development</a>
+          </div>
+          <div class="col-2">
+            <a href="https://www.twitter.com/ADJ_Woodbridge">
+              <i class="fa fa-twitter fa-3x"></i>
+            </a>
+          </div>
+          <div class="col-2">
+            <a href="https://www.linkedin.com/in/adj-driver-improvement-center-632196b5">
+              <i class="fa fa-linkedin fa-3x"></i>
+            </a>
+          </div>
+          <div class="col-2">
+            <a href="https://www.facebook.com/ADJ-Driver-Improvement-Center-181645525214421/">
+              <i class="fa fa-facebook fa-3x"></i>
+            </a>
+          </div>
         </div>
       </div>
-    </div>
 
-    <script
-      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+      <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
