remove Online Driver Improvement Class

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,15 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ADJ Driver Improvement Center</title>
 
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-    crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
   <link rel="stylesheet" type="text/css" href="/master.css" />
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
     integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous" />
   <link href="https://fonts.googleapis.com/css?family=Patua+One&display=swap" rel="stylesheet" />
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
     crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
     crossorigin="anonymous"></script>
 </head>
 
@@ -27,7 +29,8 @@
       </div>
 
       <div class="col" id="col_2">
-        <a href="https://www.google.com/maps/place/4326+Dale+Blvd+%238,+Woodbridge,+VA+22193,+USA/@38.6481644,-77.3405033,17z/data=!3m1!4b1!4m5!3m4!1s0x89b657c9643a562b:0xd98698700253593b!8m2!3d38.6481644!4d-77.33832">
+        <a
+          href="https://www.google.com/maps/place/4326+Dale+Blvd+%238,+Woodbridge,+VA+22193,+USA/@38.6481644,-77.3405033,17z/data=!3m1!4b1!4m5!3m4!1s0x89b657c9643a562b:0xd98698700253593b!8m2!3d38.6481644!4d-77.33832">
           <label>Location</label>
         </a>
       </div>
@@ -83,17 +86,18 @@
         </div>
       </div>
 
-      <div class="container">
+      <!-- <div class="container">
         <div class="row" id="second_row">
           <div class="col class_cards">
             <a href="/classes/#online" class="card index_page_card">
-              <img src="/images/iconfinder_online_course_teaching-study-class-learning_5867932.png" class="icons" alt="logo" />
+              <img src="/images/iconfinder_online_course_teaching-study-class-learning_5867932.png" class="icons"
+                alt="logo" />
               <h3>Online Driver Improvement Class</h3>
               <p>Learn more</p>
             </a>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <!-- <div class="container">
           <div class="row" id="third_row">
@@ -116,7 +120,7 @@
           <div class="col class_cards">
             <a href="/classes/#3-times" class="card index_page_card">
               <img src="/images/driver-manual-icon.png" class="icons" alt="logo" />
-              <h3>DMV 3 Failures/Permit Class</h3>
+              <h3>Failed DMV Test 3 Times Class/Permit Class On-Line</h3>
               <p>Learn more</p>
             </a>
           </div>
@@ -165,7 +169,7 @@
       <div class="container" id="copyright_cpg">
         <div class="row">
           <div class="col-6">
-            <a href="/">© 2020 ADJ Driver Improvement Center</a>
+            <a href="/">© 2022 ADJ Driver Improvement Center</a>
             <br />
             <a href="http://www.cpgdev.net">cpg development</a>
           </div>
@@ -187,11 +191,14 @@
         </div>
       </div>
 
-      <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+      <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous"></script>
-      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
         crossorigin="anonymous"></script>
-      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
 </body>
 
