--- a/views/classes.ejs
+++ b/views/classes.ejs
@@ -5,15 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ADJ Driver Improvement Center</title>
 
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-    crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="/master.css">
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
     integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Patua+One&display=swap" rel="stylesheet">
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
     crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
     crossorigin="anonymous"></script>
 </head>
 
@@ -48,8 +50,8 @@
         <div class="grid">
 
           <div class="card class_card">
-            <img class="card-img-top classes_images" src="/images/iconfinder_Speeding_Ticket-speed-policing-law-enforcement_4498991.png"
-              alt="Card image cap">
+            <img class="card-img-top classes_images"
+              src="/images/iconfinder_Speeding_Ticket-speed-policing-law-enforcement_4498991.png" alt="Card image cap">
             <div class="card-body">
               <h3 class="classes-header">In-Person Driver Improvement Class</h3>
               <p>At ADJ Driver Improvement Center in Woodbridge, Virginia, we try to make your Driver Improvement
@@ -98,7 +100,7 @@
             </div>
           </div>
 
-          <div class="card class_card" id="online">
+          <!-- <div class="card class_card" id="online">
             <img class="card-img-top classes_images" src="/images/iconfinder_online_course_teaching-study-class-learning_5867932.png"
               alt="Card image cap">
             <div class="card-body">
@@ -121,8 +123,8 @@
                 Course to satisfy a court required Driver Improvement Course. All Northern VA courts are accepting
                 online completions at this time.</p>
               <p>If you do not pass your final exam, DMV requires a 24 wait until you may test again. There are no
-                additional fees for re-testing.</p>
-              <!-- 
+                additional fees for re-testing.</p> -->
+          <!-- 
 
 
               <p>Pay attention and study up! Exams are NOT open book.</p>
@@ -133,17 +135,17 @@
               <p><em>If you are under age 20, this computer-based Driver Improvement Clinic WILL NOT satisfy a Driver
                   Improvement Clinic requirement.</em></p>
               <p><em>You must satisfactorily complete a clinic that provides classroom instruction.</em></p> -->
-              <br>
+          <!-- <br>
               <div>
                 <h2 class="calendar"><a href="https://www.va-drivercourses.com/clickIn.php?school=59">Start Now</a></h2>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <div class="card class_card" id="3-times">
             <img class="card-img-top classes_images" src="/images/driver-manual-icon.png" alt="Card image cap">
             <div class="card-body">
-              <h3>DMV 3 Failures/Permit Class</h3>
+              <h3>Failed DMV Test 3 Times Class/Permit Class (On-Line)</h3>
               <p>If you have unfortunately failed a test at DMV three times while trying to acquire a Learners Permit
                 or reinstate your Driver License, this is the class that is required.
               </p>
@@ -212,41 +214,43 @@
             <img class="card-img-top classes_images" src="/images/iconfinder_83_4863661.png" alt="Card image cap">
             <div class="card-body">
               <h3>Clases en Español</h3>
-              <p> Por clases en español por favor llama al número<p><a href="tel:+15712851521">
-                    <label class="label_no_padding">571 285-1521</label>
-                  </a>
-                </p>
+              <p> Por clases en español por favor llama al número
+              <p><a href="tel:+15712851521">
+                  <label class="label_no_padding">571 285-1521</label>
+                </a>
+              </p>
 
-                <p>La Escula de Manejo ADJ en Woodbridge ofrece todas las clases para ayudar a las personas con el
-                  proceso de concesión de licencias. Para servir mejor a nuestra comunidad, ofrecemos algunas clases
-                  para quienes el español es su idioma principal.</p>
-                <p><em>Clase de 3 Fallas/Clase del Manual del Conductor</em>
-                  Esta clase es para aquellos que están tratando de obtener un permiso de aprendiz y no han logrado
-                  pasar la parte de los signos de la prueba o el conocimiento general. Esta es también la clase para
-                  aquellos que han fallado su prueba 3 veces al intentar restablecer una licencia de conducir de
-                  Virginia suspendida o vencida.</p>
-                <p><em>Examen Practico del DMV/ Clase de Bypass/evitar el DMV</em> ADJ Driver Improvement Center es un
-                  centro de pruebas de terceros para el DMV. Esta clase ayuda con el proceso de convertir un permiso de
-                  aprendiz de Virginia en una licencia de conducir. La finalización de esta clase le permite realizar
-                  pruebas con nuestro instructor en su idioma principal y evitar
-                  tener que tomar su Examen final de habilidades en carretera en el DMV. Esta clase también le permite
-                  omitir el período de retención de 60 días en un permiso de aprendizaje.</p>
-                <p> Para obtener más información, comuníquese con nuestro instructor que habla español, Sr. Jean
-                  Carminati al<a href="tel:+15712851521" id="spanish_a_tag">
-                    <label class="label_no_padding">571 285-1521</label></a>
-                  </a>Si no está disponible para responder, deje un mensaje y rápidamente le devolverá la llamada.</p>
-                <p>NO OFRECEMOS clases de CDL o Motocicleta</p>
+              <p>La Escula de Manejo ADJ en Woodbridge ofrece todas las clases para ayudar a las personas con el
+                proceso de concesión de licencias. Para servir mejor a nuestra comunidad, ofrecemos algunas clases
+                para quienes el español es su idioma principal.</p>
+              <p><em>Clase de 3 Fallas/Clase del Manual del Conductor</em>
+                Esta clase es para aquellos que están tratando de obtener un permiso de aprendiz y no han logrado
+                pasar la parte de los signos de la prueba o el conocimiento general. Esta es también la clase para
+                aquellos que han fallado su prueba 3 veces al intentar restablecer una licencia de conducir de
+                Virginia suspendida o vencida.</p>
+              <p><em>Examen Practico del DMV/ Clase de Bypass/evitar el DMV</em> ADJ Driver Improvement Center es un
+                centro de pruebas de terceros para el DMV. Esta clase ayuda con el proceso de convertir un permiso de
+                aprendiz de Virginia en una licencia de conducir. La finalización de esta clase le permite realizar
+                pruebas con nuestro instructor en su idioma principal y evitar
+                tener que tomar su Examen final de habilidades en carretera en el DMV. Esta clase también le permite
+                omitir el período de retención de 60 días en un permiso de aprendizaje.</p>
+              <p> Para obtener más información, comuníquese con nuestro instructor que habla español, Sr. Jean
+                Carminati al<a href="tel:+15712851521" id="spanish_a_tag">
+                  <label class="label_no_padding">571 285-1521</label></a>
+                </a>Si no está disponible para responder, deje un mensaje y rápidamente le devolverá la llamada.</p>
+              <p>NO OFRECEMOS clases de CDL o Motocicleta</p>
 
-                <div>
-                  <h2 class="calendar"><a href="https://app.acuityscheduling.com/schedule.php?owner=19202093">Ver
-                      Horario</a></h2>
-                </div>
+              <div>
+                <h2 class="calendar"><a href="https://app.acuityscheduling.com/schedule.php?owner=19202093">Ver
+                    Horario</a></h2>
+              </div>
 
             </div>
           </div>
 
           <div class="card class_card" id="in-car">
-            <img class="card-img-top classes_images" src="/images/iconfinder_Driver_License-Id-License-Transport-Identification_5917197.png"
+            <img class="card-img-top classes_images"
+              src="/images/iconfinder_Driver_License-Id-License-Transport-Identification_5917197.png"
               alt="Card image cap">
             <div class="card-body">
               <h3>In-Car Driver Training</h3>
@@ -305,7 +309,7 @@
             <div class="row">
 
               <div class="col-6">
-                <a href="/">© 2020 ADJ Driver Improvement Center</a>
+                <a href="/">© 2022 ADJ Driver Improvement Center</a>
                 <br>
                 <a href="http://www.cpgdev.net">cpg development</a>
               </div>
